--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -70,6 +70,7 @@ jobs:
           WERF_SET_CI_PASS_URL: "global.ci_pass_url=review-${{ env.REVIEW_URL_PREFIX }}-miniapp-pass.r.doma.ai"
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.r.doma.ai"
           WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.r.doma.ai"
+          WERF_SET_CI_BILLING_SELF_SERVICE_URL: "global.ci_billing_self_service_url=review-${{ env.REVIEW_URL_PREFIX }}-billing-self-service.r.doma.ai"
           WERF_SET_CI_NAMESPACE: "global.ci_namespace=${{ env.REVIEW_NAMESPACE }}"
           WERF_SET_CI_URL_PREFIX: "global.ci_url_prefix=${{ env.REVIEW_URL_PREFIX }}"
           WERF_NAMESPACE: ${{ env.REVIEW_NAMESPACE }}
